--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App{
-  background-color: rgb(117, 17, 53);
   background-position: initial;
 }
 h1{
-  color: white;
+  color: rgb(117, 17, 53)
 }
 nav{
   background-color: rgb(117, 17, 53) ;
